<resources>
    <string name="app_name">Hello in English</string>
    <string name="home">Home</string>
    <string name="dictionary">Dic</string>
    <string name="quiz">Quiz</string>
    <string name="add">Add</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="empty">Empty</string>
    <string name="enter_english_word">Enter English Word</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
    <string name="ask_num">%d of %d</string>
    <string name="quiz_again">Quiz Again</string>
    <string name="cancel">Cancel</string>
    <string name="you_scored">Your Score is : %d / %d</string>
    <string name="quiz_finished">Quiz Finished</string>
    <string name="try_again">Try Again</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>